<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/medium_vertical_margin"
    android:paddingLeft="@dimen/medium_horizontal_margin"
    android:paddingRight="@dimen/medium_horizontal_margin"
    android:paddingTop="@dimen/medium_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/veryLarge_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textSize_name"
            android:text="@string/select_card" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/linearDeck"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_left"
            android:layout_width="@dimen/veryLarge_horizontal_margin"
            android:layout_height="@dimen/card_height"
            android:layout_marginEnd="@dimen/large_horizontal_margin"
            android:src="@drawable/backcard"
            android:contentDescription="@string/content_card_left"/>

        <ImageView
            android:id="@+id/card_middle"
            android:layout_width="@dimen/veryLarge_horizontal_margin"
            android:layout_height="@dimen/card_height"
            android:src="@drawable/backcard"
            android:contentDescription="@string/content_card_middle"/>

        <ImageView
            android:id="@+id/card_right"
            android:layout_width="@dimen/veryLarge_horizontal_margin"
            android:layout_height="@dimen/card_height"
            android:layout_marginStart="@dimen/large_horizontal_margin"
            android:src="@drawable/backcard"
            android:contentDescription="@string/content_card_right"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="@dimen/button_confirm"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/confirm"
        android:onClick="confirmButton"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:textSize="25sp" />

    <Chronometer
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/chronometerSize"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="@dimen/button_confirm"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tryAgain"
        android:onClick="tryAgainButton"
        android:contentDescription="@string/tryAgain"/>

</RelativeLayout>